--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
     "uuid": "^11.0.3"
   },
