--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
