--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "packageManager": "pnpm@8.11.0",
   "dependencies": {
     "chart.js": "^4.4.6",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
     "next": "15.0.3",
     "react": "^19.0.0-rc-66855b96-20241106",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
